# enphase-production-toggle

./: .gitignore  .pre-commit-config.yaml  .pre-commit-wrapper.sh  INSTALLATION.md  README.md  debug_connection.py  decode_jwt.py  find_control_endpoint.py  get_serial.py  pyproject.toml  simple_test.py  test_form_data.py  test_jwt_fix.py  test_production_control.py
.claude/: settings.local.json
.github/workflows/: test.yml
custom_components/enphase_production_toggle/: __init__.py  config_flow.py  const.py  coordinator.py  envoy_client.py  manifest.json  strings.json  switch.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_unit.py  test_envoy_client.py  test_envoy_client_simple.py  test_envoy_client_unit.py  test_error_handling.py  test_init.py  test_integration_simple.py  test_manifest.py  test_switch.py  test_switch_unit.py  test_url_construction.py
