[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enphase-production-toggle"
version = "1.3.0"
description = "Minimal Home Assistant integration for Enphase production toggle"
authors = [{name = "wwwwouter", email = "wwwouter@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "homeassistant>=2025.1.0",
    "aiohttp>=3.8.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]
dev = [
    "ruff>=0.1.0",
    "black>=24.0.0",
    "basedpyright>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.enphase_production_toggle"]

[tool.black]
target-version = ["py313"]
line-length = 88
skip-string-normalization = true

[tool.basedpyright]
pythonVersion = "3.13"
include = ["custom_components"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedVariable = false
reportDuplicateImport = true
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
